# DeepCars

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Readme.md  gmath.c  gmath.h  main.c  sig_handlers.c  sig_handlers.h  structs.c  updater.c  updater.h
app/: loader.c  loader.h  renderer.c  renderer.h  winDefaults.h  win_defaults.h
app/objects/: obj_camera_control.c  obj_camera_control.h  obj_cube.c  obj_cube.h  obj_default_bind_handler.c  obj_default_bind_handler.h  obj_dummy.c  obj_dummy.h  obj_info_draw.c  obj_info_draw.h  scene.c
app/rendering/: renderer.c  renderer.h  shader_setup.c  shader_setup.h  ssao.c  ssao.h  text_rendering.c  text_rendering.h  vfx.c  vfx.h
graphics/: camera.c  gmath.h  graphics.c  graphics.h  material.c  material.h  model.c  win.c  win.h
lib/: coredefs.c  coredefs.h  drawableObject.c  drawableObject.h  list.c  list.h  object.c  object.h  objectInclude.h  object_include.h  rand.c  rand.h  scene.c  scene.h  sceneManager.c  sceneManager.h  scm.c  scm.h  structs.c  structs.h  updater.c  updater.h  vectors.c  vectors.h
lib/graphics/: camera.c  camera.h  gmath.c  gmath.h  graphics.c  graphics.h  light.c  light.h  material.c  material.h  win.c  win.h
lib/resources/: font.c  font.h  mm.c  mm.h  model.c  model.h  model_push.h  pack.c  pack.h  rmanager.c  rmanager.h  shader.c  shader.h  shm.c  shm.h  texture.c  texture.h  txm.c  txm.h
lib/shaders/: shader.c  shader.h  shaderMgr.c  shaderMgr.h  shm.c  shm.h
map/: map.c  map.h
menu drafts/: about.xcf  button.xcf  editor.xcf  main.xcf
mllib/: bank.c  connection_genome.c  connection_genome.h  evaluator.c  evaluator.h  genome.c  genome.h  innovation.c  innovation.h  mutations.c  network.c  network.h  node_genome.c  node_genome.h  rand_helpers.c  rand_helpers.h
mllib/ga/: genome.c  genome.h  population.c  population.h
mllib/ne/: bank.c  connection_genome.c  connection_genome.h  evaluator.c  evaluator.h  genome.c  genome.h  innovation.c  innovation.h  mutations.c  network.c  network.h  rand_helpers.c  rand_helpers.h
packer/: config.json  fontbm  fontbm.readme.txt  packer.py  requirements.txt
packer/src/: common.py  fontPacker.py  materialPacker.py  modelPacker.py  shaderPacker.py  texturePacker.py
resources/: config.json  index.json  packer.py
resources/fonts/: FreeMonospaced.txt
resources/materials/: car1.json  car2.json  column.json  default.json  grass.json  grass_dec.json  sphere.json  tree1.json  wall.json
resources/models/: car.zobj  column.zobj  grass1.zobj  grass2.zobj  grass3.zobj  lenin.zobj  ring.zobj  sphere.zobj  stone1.zobj  stone2.zobj  stone3.zobj  stone4.zobj  stone5.zobj  tree1.zobj  (+2 more)
shaders/: shader.c  shader.h  shaderMgr.c  shaderMgr.h
textures/: texture.c  texture.h
(+95 files in other folders)
